[project]
name = "ask-delphi-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthijs M.H.J. Neutelings", email = "mhj.neutelings@belastingdienst.nl" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
