[project]
name = "ask-delphi-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthijs M.H.J. Neutelings", email = "mhj.neutelings@belastingdienst.nl" }
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
